test/files/neg/bug1241.check
bug1241.scala:5: error: class type required
  val x4 = new T { def hello() { println("4") } }        // error!
               ^
one error found
